--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -1,29 +1,30 @@
 <div class="m-navbar" :class="{ 'm--is-disabled': disabled,
-              'm--is-skin-tab': skin == 'light-tab' || skin == 'dark-tab',
-              'm--is-skin-light-tab': skin == 'light-tab',
-              'm--is-skin-dark-tab': skin == 'dark-tab',
+              'm--is-skin-tab': skin == 'tab',
               'm--is-skin-light': skin == 'light',
               'm--is-skin-dark': skin == 'dark',
               'm--is-skin-plain': skin == 'plain',
               'm--is-skin-simple': skin == 'simple',
               'm--is-skin-arrow': skin == 'arrow',
-              'm--is-anim-ready': animReady == true,
-              'm--no-margin': !margin }">
-    <transition name="show">
-        <div ref="buttonLeft" class="m-navbar__button" @click="scrollLeft" v-if="showArrowLeft && arrowMobile">
-            <m-icon-button :skin="buttonSkin" icon-name="left-chevron"></m-icon-button>
+              'm--is-anim-ready': animReady == true }">
+    <div class="m-navbar__max-width" :style="{ maxWidth: maxWidth }">
+        <transition name="m--is">
+            <div ref="buttonLeft" class="m-navbar__button m--is-left" @click="scrollLeft" v-if="showArrowLeft && navigationArrow">
+                <m-icon-button :skin="buttonSkin" icon-name="left-chevron" :ripple="skin!=='tab'"></m-icon-button>
+            </div>
+        </transition>
+        <div class="m-navbar__contents" ref="contents">
+            <nav class="m-navbar__wrap" role="menubar" ref="wrap">
+                <ul class="m-navbar__list" aria-hidden="true" ref="list">
+                    <slot></slot>
+                    <li aria-hidden="true" class="m-navbar__line" v-if="isLightSkin" ref="light"></li>
+                    <li aria-hidden="true" class="m-navbar__arrow" v-if="isArrowSkin" ref="arrow"></li>
+                </ul>
+            </nav>
         </div>
-    </transition>
-    <nav class="m-navbar__wrap" role="menubar" ref="wrap">
-        <ul class="m-navbar__list" aria-hidden="true" ref="list">
-            <slot></slot>
-            <li aria-hidden="true" class="m-navbar__line" :class="{ 'm--is-anim-active': animActive }" v-if="isLightSkin" ref="light"></li>
-            <li aria-hidden="true" class="m-navbar__arrow" :class="{ 'm--is-anim-active': animActive }" v-if="isArrowSkin" ref="arrow"></li>
-        </ul>
-    </nav>
-    <transition name="show">
-        <div ref="buttonRight" class="m-navbar__button" @click="scrollRight" v-if="showArrowRight && arrowMobile">
-            <m-icon-button :skin="buttonSkin" icon-name="chevron"></m-icon-button>
-        </div>
-    </transition>
+        <transition name="m--is">
+            <div ref="buttonRight" class="m-navbar__button m--is-right" @click="scrollRight" v-if="showArrowRight && navigationArrow">
+                <m-icon-button :skin="buttonSkin" icon-name="chevron" :ripple="skin!=='tab'"></m-icon-button>
+            </div>
+        </transition>
     </div>
+</div>
