--- a/src/components/navbar/navbar.sandbox.html
+++ b/src/components/navbar/navbar.sandbox.html
@@ -7,7 +7,119 @@
         </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank">PR description</a>
         -->
     </p>
-    <p>
-        <m-navbar><!-- Test case --></m-navbar>
-    </p>
+
+    <h2>Skin tab et default</h2>
+    <m-navbar :selected.sync="selected">
+        <m-navbar-item value="salut">Salut</m-navbar-item>
+        <m-navbar-item value="Bonjour">Bonjour</m-navbar-item>
+        <m-navbar-item value="TVA">TVA</m-navbar-item>
+        <m-navbar-item value="salut1">Salut1</m-navbar-item>
+        <m-navbar-item value="Bonjour1">Bonjour1</m-navbar-item>
+        <m-navbar-item value="TVA1">TVA1</m-navbar-item>
+        <m-navbar-item value="salut2">Salut2</m-navbar-item>
+        <m-navbar-item value="Bonjour2">Bonjour2</m-navbar-item>
+        <m-navbar-item value="TVA2">TVA2</m-navbar-item>
+        <m-navbar-item value="salut3">Salut3</m-navbar-item>
+        <m-navbar-item value="Bonjour3">Bonjour3</m-navbar-item>
+        <m-navbar-item value="TVA3">TVA3</m-navbar-item>
+        <m-navbar-item value="salut4">Salut4</m-navbar-item>
+        <m-navbar-item value="Bonjour4">Bonjour4</m-navbar-item>
+        <m-navbar-item value="TVA4">TVA4</m-navbar-item>
+    </m-navbar>
+
+    <h2>Skin light</h2>
+    <m-navbar :selected.sync="selected"skin="light" max-width="300px">
+        <m-navbar-item value="salut">Salut</m-navbar-item>
+        <m-navbar-item value="Bonjour">Bonjour</m-navbar-item>
+        <m-navbar-item value="TVA">TVA</m-navbar-item>
+        <m-navbar-item value="salut1">Salut1</m-navbar-item>
+        <m-navbar-item value="Bonjour1">Bonjour1</m-navbar-item>
+        <m-navbar-item value="TVA1">TVA1</m-navbar-item>
+        <m-navbar-item value="salut2">Salut2</m-navbar-item>
+        <m-navbar-item value="Bonjour2">Bonjour2</m-navbar-item>
+        <m-navbar-item value="TVA2">TVA2</m-navbar-item>
+        <m-navbar-item value="salut3">Salut3</m-navbar-item>
+        <m-navbar-item value="Bonjour3">Bonjour3</m-navbar-item>
+        <m-navbar-item value="TVA3">TVA3</m-navbar-item>
+        <m-navbar-item value="salut4">Salut4</m-navbar-item>
+        <m-navbar-item value="Bonjour4">Bonjour4</m-navbar-item>
+        <m-navbar-item value="TVA4">TVA4</m-navbar-item>
+    </m-navbar>
+
+    <h2>Skin dark</h2>
+    <m-navbar :selected.sync="selected" skin="dark">
+        <m-navbar-item value="salut">Salut</m-navbar-item>
+        <m-navbar-item value="Bonjour">Bonj our B onjour Bo njour Bon jour Bonjour</m-navbar-item>
+        <m-navbar-item value="TVA">TVA</m-navbar-item>
+        <m-navbar-item value="salut1">Salut1</m-navbar-item>
+        <m-navbar-item value="Bonjour1">Bonjour1</m-navbar-item>
+        <m-navbar-item value="TVA1">TVA1</m-navbar-item>
+        <m-navbar-item value="salut2">Salut2</m-navbar-item>
+        <m-navbar-item value="Bonjour2">Bonjour2</m-navbar-item>
+        <m-navbar-item value="TVA2">TVA2</m-navbar-item>
+        <m-navbar-item value="salut3">Salut3</m-navbar-item>
+        <m-navbar-item value="Bonjour3">Bonjour3</m-navbar-item>
+        <m-navbar-item value="TVA3">TVA3</m-navbar-item>
+        <m-navbar-item value="salut4">Salut4</m-navbar-item>
+        <m-navbar-item value="Bonjour4">Bonjour4</m-navbar-item>
+        <m-navbar-item value="TVA4">TVA4</m-navbar-item>
+    </m-navbar>
+
+    <h2>Skin plain</h2>
+    <m-navbar :selected.sync="selected" skin="plain">
+        <m-navbar-item value="salut">Salut</m-navbar-item>
+        <m-navbar-item value="Bonjour">Bonjour</m-navbar-item>
+        <m-navbar-item value="TVA">TVA</m-navbar-item>
+        <m-navbar-item value="salut1">Salut1</m-navbar-item>
+        <m-navbar-item value="Bonjour1">Bonjour1</m-navbar-item>
+        <m-navbar-item value="TVA1">TVA1</m-navbar-item>
+        <m-navbar-item value="salut2">Salut2</m-navbar-item>
+        <m-navbar-item value="Bonjour2">Bonjour2</m-navbar-item>
+        <m-navbar-item value="TVA2">TVA2</m-navbar-item>
+        <m-navbar-item value="salut3">Salut3</m-navbar-item>
+        <m-navbar-item value="Bonjour3">Bonjour3</m-navbar-item>
+        <m-navbar-item value="TVA3">TVA3</m-navbar-item>
+        <m-navbar-item value="salut4">Salut4</m-navbar-item>
+        <m-navbar-item value="Bonjour4">Bonjour4</m-navbar-item>
+        <m-navbar-item value="TVA4">TVA4</m-navbar-item>
+    </m-navbar>
+
+    <h2>Skin simple</h2>
+    <m-navbar :selected.sync="selected" skin="simple">
+        <m-navbar-item value="salut">Salut</m-navbar-item>
+        <m-navbar-item value="Bonjour">Bonjour</m-navbar-item>
+        <m-navbar-item value="TVA">TVA</m-navbar-item>
+        <m-navbar-item value="salut1">Salut1</m-navbar-item>
+        <m-navbar-item value="Bonjour1">Bonjour1</m-navbar-item>
+        <m-navbar-item value="TVA1">TVA1</m-navbar-item>
+        <m-navbar-item value="salut2">Salut2</m-navbar-item>
+        <m-navbar-item value="Bonjour2">Bonjour2</m-navbar-item>
+        <m-navbar-item value="TVA2">TVA2</m-navbar-item>
+        <m-navbar-item value="salut3">Salut3</m-navbar-item>
+        <m-navbar-item value="Bonjour3">Bonjour3</m-navbar-item>
+        <m-navbar-item value="TVA3">TVA3</m-navbar-item>
+        <m-navbar-item value="salut4">Salut4</m-navbar-item>
+        <m-navbar-item value="Bonjour4">Bonjour4</m-navbar-item>
+        <m-navbar-item value="TVA4">TVA4</m-navbar-item>
+    </m-navbar>
+
+    <h2>Skin arrow</h2>
+    <m-navbar :selected.sync="selected" skin="arrow" max-width="200px">
+        <m-navbar-item value="salut">Salut</m-navbar-item>
+        <m-navbar-item value="Bonjour">Bonjour</m-navbar-item>
+        <m-navbar-item value="TVA">TVA</m-navbar-item>
+        <m-navbar-item value="salut1">Salut1</m-navbar-item>
+        <m-navbar-item value="Bonjour1">Bonjour1</m-navbar-item>
+        <m-navbar-item value="TVA1">TVA1</m-navbar-item>
+        <m-navbar-item value="salut2">Salut2</m-navbar-item>
+        <m-navbar-item value="Bonjour2">Bonjour2</m-navbar-item>
+        <m-navbar-item value="TVA2">TVA2</m-navbar-item>
+        <m-navbar-item value="salut3">Salut3</m-navbar-item>
+        <m-navbar-item value="Bonjour3">Bonjour3</m-navbar-item>
+        <m-navbar-item value="TVA3">TVA3</m-navbar-item>
+        <m-navbar-item value="salut4">Salut4</m-navbar-item>
+        <m-navbar-item value="Bonjour4">Bonjour4</m-navbar-item>
+        <m-navbar-item value="TVA4">TVA4</m-navbar-item>
+    </m-navbar>
+
 </div>
