Ajustement du type pour le cas de test word-wrap

--- a/src/components/textfield/textfield.sandbox.html
+++ b/src/components/textfield/textfield.sandbox.html
@@ -124,7 +124,7 @@
     <h6>Champ de saisie de type courriel et word-wrap à true</h6>
     <p>Le wordwrap n'est pas appliqué car le textfield n'est pas de type text. Envoie également une erreur dans la console.</p>
     <p class="m-u--margin-top--l">
-        <m-textfield type="mail" word-wrap="true" value="Lorsque le type du champ de saisie est différent de text, ici courriel, le word-wrap ne doit pas s'activer."></m-textfield>
+        <m-textfield type="email" word-wrap="true" value="Lorsque le type du champ de saisie est différent de text, ici courriel, le word-wrap ne doit pas s'activer."></m-textfield>
     </p>
 
 
