--- a/src/components/navbar-item/navbar-item.html
+++ b/src/components/navbar-item/navbar-item.html
@@ -6,10 +6,10 @@
     @click="onClick"
     @mouseover="onMouseover"
     @mouseleave="onMouseleave">
-    <router-link class="m-navbar-item__contents" :to="url" v-if="url && !isSelected" :aria-selected="isSelected">
+    <router-link class="m-navbar-item__contents" :to="url" v-if="url && !isSelected" :aria-selected="isSelected" :aria-haspopup="ariaHaspopup" :aria-expanded="ariaExpanded" :aria-controls="ariaControls">
         <slot></slot>
     </router-link>
-    <span class="m-navbar-item__contents" :tabindex="isSelected ? '-1' : '0'" :aria-selected="isSelected" v-else>
+    <span class="m-navbar-item__contents" :tabindex="isSelected ? '-1' : '0'" :aria-selected="isSelected" :aria-haspopup="ariaHaspopup" :aria-expanded="ariaExpanded" :aria-controls="ariaControls" v-else>
         <slot></slot>
     </span>
 </li>
