--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -13,13 +13,13 @@
             </div>
         </transition>
         <div class="m-navbar__contents" ref="contents">
-            <nav class="m-navbar__wrap" role="menubar" ref="wrap">
+            <div class="m-navbar__wrap" role="menubar" ref="wrap">
                 <ul class="m-navbar__list" aria-hidden="true" ref="list">
                     <slot></slot>
                     <li aria-hidden="true" class="m-navbar__line" v-if="isLightSkin" ref="light"></li>
                     <li aria-hidden="true" class="m-navbar__arrow" v-if="isArrowSkin" ref="arrow"></li>
                 </ul>
-            </nav>
+            </div>
         </div>
         <transition name="m--is">
             <div ref="buttonRight" class="m-navbar__button m--is-right" @click="scrollRight" v-if="showArrowRight && navigationArrow">
