--- a/src/components/link/link.scss
+++ b/src/components/link/link.scss
@@ -27,7 +27,7 @@
         &:not(.m--no-underline) {
             .m-link__text {
                 transition: box-shadow $m-transition-duration--s ease;
-                box-shadow: 0 0 rgba($m-color--interactive, 0); // rgba doesn't seem to work with css variables in hex value... but in this case it doesn't matter though.
+                box-shadow: 0 0 rgba($m-color--white, 0); // rgba doesn't seem to work with css variables in hex value... but in this case it doesn't matter though.
             }
 
             &:not(.m--is-unvisited):visited {
