MODUL-179 - Add readonly prop and adjust popper

--- a/src/components/textarea/textarea.html
+++ b/src/components/textarea/textarea.html
@@ -17,6 +17,7 @@
                    :focus="isFocus"
                    :empty="isEmpty"
                    :icon-name="iconName"
+                   :readonly="readonly"
                    :required-marker="requiredMarker"
                    :tag-style="tagStyle">
         <textarea ref="input"
