--- a/src/components/textfield/textfield.html
+++ b/src/components/textfield/textfield.html
@@ -17,6 +17,7 @@
                    :label-for="id"
                    :focus="isFocus"
                    :empty="isEmpty"
+                   :readonly="readonly"
                    :required-marker="requiredMarker"
                    :icon-name="iconName"
                    :tag-style="tagStyle">
