--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -40,7 +40,7 @@ $m-input-style--padding: 4px !default;
 
     &:hover:not(.m--is-disabled):not(.m--is-waiting):not(.m--has-error):not(.m--is-valid):not(.m--is-focus),
     &.m--has-value {
-        &::before {
+        &:not(.m--is-readonly)::before {
             border-color: $m-color--text;
         }
     }
@@ -51,7 +51,7 @@ $m-input-style--padding: 4px !default;
         }
     }
 
-    &.m--is-focus {
+    &.m--is-focus:not(.m--is-readonly) {
         &::after {
             width: 100%;
         }
@@ -317,10 +317,6 @@ $m-input-style--padding: 4px !default;
             vertical-align: middle;
         }
 
-        &[readonly=readonly] {
-            cursor: pointer;
-        }
-
         &::-ms-clear,
         &::-ms-reveal {
             display: none;
@@ -329,6 +325,10 @@ $m-input-style--padding: 4px !default;
         &:-webkit-autofill {
             background: rgba($m-color--white, 0);
             -webkit-box-shadow: 0 0 0 1000px $m-color--white inset !important;
+        }
+
+        &[readonly=readonly] {
+            cursor: pointer;
         }
     }
 
