Add action prop on m-menu-item

--- a/src/components/dropdown/dropdown.sandbox.html
+++ b/src/components/dropdown/dropdown.sandbox.html
@@ -8,6 +8,13 @@
         -->
     </p>
     <p>
-        <m-dropdown><!-- Test case --></m-dropdown>
+        <m-dropdown :filterable="true" label="test">
+            <m-dropdown-item value="Test 1"></m-dropdown-item>
+            <m-dropdown-item value="Test 2"></m-dropdown-item>
+            <m-dropdown-item value="Test 3"></m-dropdown-item>
+            <m-dropdown-item value="Test 4"></m-dropdown-item>
+            <m-dropdown-item value="Test 5"></m-dropdown-item>
+            <m-dropdown-item value="Test 6"></m-dropdown-item>
+        </m-dropdown>
     </p>
 </div>
