--- a/src/components/menu-item/menu-item.html
+++ b/src/components/menu-item/menu-item.html
@@ -7,7 +7,10 @@
     @keydown.enter.prevent="onClick"
     @click.prevent="onClick">
     <span class="m-menu-item__icon" ref="icon" v-if="hasIcon">
-        <m-icon :name="iconName" v-if="hasIconNameProp"></m-icon>
+        <m-icon :name="iconInfo.iconName" v-if="hasIconNameProp"></m-icon>
     </span>
-    <span class="m-menu-item__text" ref="text"><slot></slot></span>
+    <span class="m-menu-item__text" ref="text">
+        <template v-if="iconInfo.label">{{ iconInfo.label }}</template>
+        <slot v-else></slot>
+    </span>
 </li>
