--- a/src/components/menu-item/menu-item.scss
+++ b/src/components/menu-item/menu-item.scss
@@ -1,23 +1,15 @@
 @import 'abstracts/variables';
-$m-menu-item--color-hover: $m-color--grey-lightest !default;
-$m-menu-item--color-select: $m-color--grey-light !default;
+$m-menu-item--color-hover: $m-color--interactive-lightest !default;
+$m-menu-item--color-select: $m-color--grey-lighter !default;
 $m-menu-item--color-active: $m-color--grey-lightest !default;
 
 .m-menu-item {
     display: flex;
     text-decoration: none;
-    border: 1px solid $m-color--grey-light;
+    max-width: 220px;
 
-    & + & {
-        border-top: 0;
-    }
-
-    &:first-child {
-        border-radius: $m-border-radius--s $m-border-radius--s 0 0;
-    }
-
-    &:last-child {
-        border-radius: 0  0 $m-border-radius--s $m-border-radius--s;
+    &:not(:last-child) {
+        border-bottom: 1px solid $m-color--border;
     }
 
     .m--has-icon-spacing {
@@ -59,7 +51,7 @@ $m-menu-item--color-active: $m-color--grey-lightest !default;
 
         &:hover,
         &:focus {
-            background-color: $m-menu-item--color-hover;
+            background: $m-menu-item--color-hover;
 
             .m-menu-item {
                 &__icon {
@@ -69,7 +61,7 @@ $m-menu-item--color-active: $m-color--grey-lightest !default;
         }
 
         &:active {
-            background-color: $m-menu-item--color-active;
+            background: $m-menu-item--color-active;
         }
     }
 
