--- a/src/components/menu/menu.sandbox.html
+++ b/src/components/menu/menu.sandbox.html
@@ -23,7 +23,7 @@
 
         <m-menu>
             <m-menu-item>Test 1</m-menu-item>
-            <m-menu-item>Test 2</m-menu-item>
+            <m-menu-item :disabled="true">Test 2</m-menu-item>
             <m-menu-item>Test 3</m-menu-item>
             <m-menu-item>Test 4</m-menu-item>
             <m-menu-item>Test 5</m-menu-item>
