--- a/src/components/menu-item/menu-item.scss
+++ b/src/components/menu-item/menu-item.scss
@@ -29,20 +29,28 @@ $m-menu-item--color-active: $m-color--grey-lightest !default;
     }
 
     &__icon {
-        color: $m-color--grey-darker;
+        transition: color $m-transition-duration ease;
+        color: $m-color--grey;
         width: 32px;
         padding-left: $m-padding;
     }
 
     &__text {
         flex: 1 1 auto;
-        color: $m-color--black;
+        color: $m-color--text;
         padding-right: $m-padding;
         padding-left: $m-padding;
     }
 
     &.m--is-disabled {
         cursor: not-allowed;
+
+        .m-menu-item {
+            &__text,
+            &__icon {
+                color: $m-color--disabled;
+            }
+        }
     }
 
     &:not(.m--is-disabled) {
@@ -53,10 +61,8 @@ $m-menu-item--color-active: $m-color--grey-lightest !default;
         &:focus {
             background: $m-menu-item--color-hover;
 
-            .m-menu-item {
-                &__icon {
-                    color: $m-color--grey-darker;
-                }
+            .m-menu-item__icon {
+                color: $m-color--text;
             }
         }
 
